// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processTableData basic processing should generate a header and fix widths 1`] = `
Object {
  "columns": Array [
    Object {
      "text": "Column 1",
    },
    Object {
      "text": "Column 2",
    },
    Object {
      "text": "Column 3",
    },
  ],
  "rows": Array [
    Array [
      1,
      null,
      null,
    ],
    Array [
      2,
      3,
      4,
    ],
    Array [
      5,
      6,
      null,
    ],
  ],
}
`;

exports[`processTableData basic processing should read header and two rows 1`] = `
Object {
  "columns": Array [
    Object {
      "text": "a",
    },
    Object {
      "text": "b",
    },
    Object {
      "text": "c",
    },
  ],
  "rows": Array [
    Array [
      1,
      2,
      3,
    ],
    Array [
      4,
      5,
      6,
    ],
  ],
}
`;
